# Cornell_EM_SummerSchool_2021

./: LICENSE  README.md
Tutorial 0 - Python 101/: Tutorial0a-1.ipynb  Tutorial0a-3.ipynb  Tutorial0b.ipynb
Tutorial 1 - STEM Imaging/: Tutorial1_STEM_probe_aberrations.ipynb
Tutorial 2 - Data Navigation/PlugIns/experimental/: CHANGES.rst  README.rst  meta.yaml  setup.cfg  test-requirements.txt
Tutorial 2 - Data Navigation/PlugIns/experimental/.github/workflows/: python-package.yml
Tutorial 2 - Data Navigation/PlugIns/experimental/nionswift_experimental.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Tutorial 2 - Data Navigation/PlugIns/experimental/nionswift_plugin/nion_experimental_4dtools/: ComputationUI.py  DarkCorrection4D.py
Tutorial 2 - Data Navigation/PlugIns/experimental/nionswift_plugin/nion_experimental_tools/: AlignMultiSI.py  AlignSequenceOfMultiDimensionalData.py  GraphicsTools.py  MakeColorCOM.py  MakeIDPC.py  MeasureZLP.py
Tutorial 2 - Data Navigation/PlugIns/experimental/nionswift_plugin/nion_experimental_tools/test/: AffineTransformImage_test.py  MultiDimensionalProcessing_test.py
Tutorial 2 - Data Navigation/PlugIns/experimental/scripts/: AlignZLP.py  CompositeSurveyImage.py  FindInterface.py  MeasureZLPStability.py  MultiEELS.py
Tutorial 3 - Diffraction Simulation/: MuSTEM_methods.py  T3_DiffractionSimulation_VM.ipynb  user_input.txt
Tutorial 4 - Spectroscopy/: MCR_Functions.py  T4a - Basic EELS Processing.ipynb  T4b - Advanced EELS Processing.ipynb  eels.py
Tutorial 5 - 4D STEM/: T5-4DSTEM.ipynb  fun.py
(+34 files in other folders)
