[metadata]
name = nionswift-experimental
version = 0.7.1
author = Nion Software
author_email = swift@nion.com
description = Experimental tools package for Nion Swift.
long_description = file: README.rst, CHANGES.rst
url = https://github.com/nion-software/experimental
license = GPL-3.0-only
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find_namespace:
python_requires = ~=3.7
install_requires =
    nionswift>=0.15.0,<0.16.0
tests_require =
    nionutils
    numpy

[options.packages.find]
include =
    nionswift_plugin
    nionswift_plugin.nion_experimental_tools
    nionswift_plugin.nion_experimental_4dtools
